--- a/TangPoetryAnalysis/src/main/resources/static/index.html
+++ b/TangPoetryAnalysis/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>唐诗分析报告-第二版</title>
+    <title>唐诗分析报告</title>
     <link type="text/css" href="assets/css/base.css">
     <script type="text/javascript" src="assets/js/echarts.min.js"></script>
     <script type="text/javascript" src="assets/js/echarts-wordcloud.min.js"></script>
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body id="box">
-<h1>唐诗分析报告-第二版</h1>
+<h1>唐诗分析报告</h1>
 <div>
     <div>
         <input type="button" value="创作数量排行榜" onclick="creationRanking('content')">
